--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>PORTFOLIO</title>
-	<link rel="stylesheet" href="stylo/normalize.css">
-	<link rel="stylesheet" href="stylo/stylo.css">
+	<link rel="shortcut icon" href="./img/favicon.ico">
 	<link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,6 +12,9 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap" rel="stylesheet">
+	
+	<link rel="stylesheet" href="stylo/normalize.css">
+	<link rel="stylesheet" href="stylo/stylo.css">
 </head>
 <body>
 
@@ -20,14 +22,15 @@
    	<header>	
 		<nav class="navbar">
 			<ul class="navbar_items">
-				<li class="active"><a href="#">Sobre Mí</a></li>
-				<li><a href="#">Proyectos</a></li>
-				<li><a href="#">Contacto</a></li> 
+				<li class="active"><a href="#Misconocimientos">Sobre Mí</a></li>
+				<li><a href="#Proyectos">Proyectos</a></li>
+				<li><a href="#Contacto">Contacto</a></li> 
 			</ul>
 				<span class="btn-menu">
 					<i class="fa fa-bars"></i>
 			    </span>	
 		</nav>
+		<div class="line"></div>
   	</header>
 	  
 	<!-- TEXTO DE INICIO -->
@@ -38,14 +41,14 @@
 				<h1>Santiago Maza</h1>
 			</div>
 			<div class="art_description">
-				<p>Desarrollador <strong>Front-End Junior</strong>, estudiante de manera autodidacta y en cursos online a  través de Internet</p><br/>
-				<p>En este Portfolio vas a poder visualizar, todos los <strong>Proyectos</strong> que llevo realizando (con el objetivo de ir adquiriendo experiencia), y mis conocimientos en <strong>Lenguajes, Frameworks y Librerias</strong>, con las que estuve desarrollando los sitios y/o aplicaciones</p>
+				<p>Desarrollador <strong>Front-End Junior</strong>, estudiante de manera autodidacta y en cursos online a  través de Internet.</p><br/>
+				<p>En este Portfolio vas a poder visualizar, todos los <strong>Proyectos</strong> que llevo realizando, y mis conocimientos en <strong>Lenguajes, Frameworks y Librerias</strong>, con las que estuve desarrollando los sitios y/o aplicaciones.</p>
 			</div>
 		</article>
 	</section>
 	
-	<!-- SECCION DE LO QUE CONOZCO -->
-	<section>
+	<!-- CONOCIMIENTO -->
+	<section id="Misconocimientos">
 		<article class="article_skills">
 			<h2>Mis Conocimientos</h2>
 			<div class="conteiner_images">
@@ -75,11 +78,11 @@
 				</div>
 			</div>
 		</article>
-		
+		<div class="line"></div>
   	</section>
 
 	<!-- PROYECTOS HECHOS -->
-	<section>
+	<section id="Proyectos">
 		<article class="article_name_proyectos">
 				<h2>Proyectos</h2>
 
@@ -106,10 +109,11 @@
 
 				</section>
 		</article>  
+		<div class="line"></div>
 	</section>	  
 
   	<!-- PIE DE PAGINA -->
-	<footer>
+	<footer id="Contacto">
 	  	<section class="footer">
 		    <div class="footer_enlaces">
 				<div class="box">
